chore: update database configuration and enhance log management

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-DB_HOST="192.168.25.122"
-DB_PORT="3306"
-DB_USER="suphot"
-DB_PASSWORD="12345678"
+DB_HOST="159.192.127.185"
+DB_PORT="8888"
+DB_USER="root"
+DB_PASSWORD="123456"
 DB_NAME="jhcisdb"
-PROVIDER="Atitporn"
+PROVIDER="POLIN"
 TOKEN=8cdd5aa2-83ee-4f8d-bebe-2241daa175b3
